bdr.BDR2.scala.error
Compilation error:
BDR2:1: error: identifier expected but string literal found.
var letter: "RI"
            ^